--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "playground-ts",
+  "name": "@lsby/net-core",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "exports": {
     "require": "./dist/cjs/index.cjs",
     "import": "./dist/esm/index.js"
-  },
-  "bin": {
-    "playground-ts-bin": "dist/esm/index.js"
   },
   "files": [
     "dist"
