--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "other:pub": "npm run other:typecheck && npm run build:all && bumpp && pnpm -r publish --access public",
     "other:typecheck": "tsc --noEmit",
     "other:typecheck:watch": "tsc --noEmit -w",
-    "reset:all": "git reset --hard HEAD && git clean -xdff && pnpm i",
     "run:start": "tsx src/index.ts"
   },
   "dependencies": {
+    "debug": "^4.3.5",
+    "express": "^4.19.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@types/debug": "^4.1.12",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.12.10",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
