--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "run:start": "tsx src/index.ts"
   },
   "dependencies": {
+    "@lsby/ts-fp-data": "^0.0.5",
     "debug": "^4.3.5",
     "express": "^4.19.2",
     "zod": "^3.23.8"
