--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "run:start": "tsx src/index.ts"
   },
   "dependencies": {
-    "@lsby/ts-fp-data": "^0.0.5",
     "debug": "^4.3.5",
     "express": "^4.19.2",
     "zod": "^3.23.8"
@@ -44,5 +43,8 @@
     "tsup": "^8.0.2",
     "tsx": "^4.9.3",
     "typescript": "^5.4.5"
+  },
+  "peerDependencies": {
+    "@lsby/ts-fp-data": "^0.0.6"
   }
 }
