修复bin文件路径

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "import": "./dist/esm/index.js"
   },
   "bin": {
-    "lsby-net-core-gen-test": "./dist/bin/gen-test/bin.js",
-    "lsby-net-core-get-type": "./dist/bin/get-type/bin.js"
+    "lsby-net-core-gen-test": "./dist/bin/gen-test/bin.cjs",
+    "lsby-net-core-get-type": "./dist/bin/get-type/bin.cjs"
   },
   "files": [
     "dist"
