--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@types/debug": "^4.1.12",
-    "@types/express": "^4.17.21",
     "@types/node": "^20.12.10",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
@@ -51,6 +50,7 @@
     "typescript": "^5.4.5"
   },
   "peerDependencies": {
-    "@lsby/ts-fp-data": "^0.0.6"
+    "@lsby/ts-fp-data": "^0.0.6",
+    "@types/express": "^4.17.21"
   }
 }
