增加生成接口列表的bin

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "import": "./dist/esm/index.js"
   },
   "bin": {
+    "lsby-net-core-gen-list": "./dist/bin/gen-list/bin.cjs",
     "lsby-net-core-gen-test": "./dist/bin/gen-test/bin.cjs",
     "lsby-net-core-gen-type": "./dist/bin/gen-type/bin.cjs"
   },
