--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "commander": "^12.1.0",
     "debug": "^4.3.5",
     "express": "^4.19.2",
+    "vitest": "^2.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "@types/node": "^20.12.10",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
+    "@vitest/coverage-v8": "^2.0.2",
     "bumpp": "^9.4.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
