--- a/package.json
+++ b/package.json
@@ -37,16 +37,11 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@lsby/eslint-config": "^0.0.2",
     "@types/debug": "^4.1.12",
     "@types/node": "^20.12.10",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
     "@vitest/coverage-v8": "^2.0.2",
     "bumpp": "^9.4.1",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-sort-class-members": "^1.20.0",
-    "eslint-plugin-unused-imports": "^3.2.0",
     "prettier": "3.2.5",
     "prettier-plugin-packagejson": "^2.5.0",
     "tsup": "^8.0.2",
