插件使用task包装

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "test:coverage": "npm run check:all && vitest run --coverage && open-cli ./coverage/index.html"
   },
   "dependencies": {
+    "@lsby/ts-fp-data": "^0.0.9",
     "commander": "^12.1.0",
     "debug": "^4.3.5",
     "express": "^4.19.2",
