--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "commander": "^12.1.0",
     "debug": "^4.3.5",
     "express": "^4.19.2",
+    "uuid": "^10.0.0",
     "vitest": "^2.0.2",
     "zod": "^3.23.8"
   },
@@ -40,6 +41,7 @@
     "@lsby/eslint-config": "^0.0.2",
     "@types/debug": "^4.1.12",
     "@types/node": "^20.12.10",
+    "@types/uuid": "^10.0.0",
     "@vitest/coverage-v8": "^2.0.2",
     "bumpp": "^9.4.1",
     "prettier": "3.2.5",
