--- a/package.json
+++ b/package.json
@@ -32,18 +32,15 @@
     "@lsby/ts-global": "^0.0.3",
     "@lsby/ts-log": "^0.0.3",
     "commander": "^12.1.0",
-    "debug": "^4.3.5",
     "express": "^4.19.2",
-    "uuid": "^10.0.0",
+    "short-uuid": "^5.2.0",
     "vitest": "^2.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@lsby/eslint-config": "^0.0.2",
-    "@types/debug": "^4.1.12",
     "@types/node": "^20.12.10",
-    "@types/uuid": "^10.0.0",
     "@vitest/coverage-v8": "^2.0.2",
     "bumpp": "^9.4.1",
     "prettier": "3.2.5",
@@ -56,3 +53,4 @@
     "@types/express": "^4.17.21"
   }
 }
+
