--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@lsby/ts-log": "^0.0.3",
     "commander": "^12.1.0",
     "express": "^4.19.2",
+    "lodash": "^4.17.21",
     "short-uuid": "^5.2.0",
     "vitest": "^2.0.2",
     "zod": "^3.23.8"
@@ -40,13 +41,14 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@lsby/eslint-config": "^0.1.0",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20.12.10",
     "@vitest/coverage-v8": "^2.0.2",
     "bumpp": "^9.4.1",
     "prettier": "3.2.5",
     "prettier-plugin-packagejson": "^2.5.0",
     "tsup": "^8.0.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.2"
   },
   "peerDependencies": {
     "@lsby/ts-fp-data": "^0.2.3",
