--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-    "@lsby/eslint-config": "^0.1.0",
+    "@lsby/eslint-config": "^0.2.8",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.12.10",
     "@vitest/coverage-v8": "^2.0.2",
@@ -48,7 +48,7 @@
     "prettier": "3.2.5",
     "prettier-plugin-packagejson": "^2.5.0",
     "tsup": "^8.0.2",
-    "typescript": "^5.6.2"
+    "typescript": "<5.6.0"
   },
   "peerDependencies": {
     "@lsby/ts-fp-data": "^0.2.4",
