--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,6 @@
   "semi": false,
   "endOfLine": "auto",
   "singleQuote": true,
-  "plugins": ["prettier-plugin-packagejson", "@ianvs/prettier-plugin-sort-imports"],
+  "plugins": ["prettier-plugin-packagejson", "@ianvs/prettier-plugin-sort-imports", "prettier-plugin-organize-imports"],
   "importOrder": ["<BUILTIN_MODULES>", "<THIRD_PARTY_MODULES>", "^@([^/]+?)/(.*)$", "^[./]"]
 }
