--- a/package.json
+++ b/package.json
@@ -41,14 +41,22 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-    "@lsby/eslint-config": "^0.2.9",
+    "@lsby/eslint-config": "^0.2.17",
+    "@lsby/eslint-plugin": "^0.0.8",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.12.10",
     "@types/ws": "^8.5.13",
     "@vitest/coverage-v8": "^2.0.2",
     "bumpp": "^9.4.1",
-    "prettier": "3.2.5",
-    "prettier-plugin-packagejson": "^2.5.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsdoc": "^50.2.4",
+    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-sort-class-members": "^1.20.0",
+    "prettier": "3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-packagejson": "^2.5.2",
     "tsup": "^8.0.2",
     "typescript": "<5.6.0"
   },
