--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lsby/net-core",
-  "version": "0.6.4-beta.1",
+  "version": "0.6.4",
   "type": "module",
   "exports": {
     "require": "./dist/cjs/index.cjs",
