--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "express": "^4.19.2",
     "lodash": "^4.17.21",
     "short-uuid": "^5.2.0",
-    "vitest": "^2.0.2",
     "ws": "^8.18.0",
     "zod": "^3.24.2"
   },
@@ -60,7 +59,8 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-packagejson": "^2.5.2",
     "tsup": "^8.5.0",
-    "typescript": "<5.6.0"
+    "typescript": "<5.6.0",
+    "vitest": "^2.0.2"
   },
   "peerDependencies": {
     "@lsby/ts-fp-data": "^0.2.5",
