--- a/package.json
+++ b/package.json
@@ -31,13 +31,10 @@
   },
   "dependencies": {
     "@lsby/ts-global": "^0.0.8",
-    "@lsby/ts-log": "^0.2.0",
     "commander": "^12.1.0",
-    "express": "^4.19.2",
     "lodash": "^4.17.21",
     "short-uuid": "^5.2.0",
-    "ws": "^8.18.0",
-    "zod": "^3.24.2"
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
@@ -63,8 +60,11 @@
     "vitest": "^2.0.2"
   },
   "peerDependencies": {
-    "@lsby/ts-fp-data": "^0.2.5",
-    "@types/express": "^4.17.21"
+    "@lsby/ts-fp-data": "0.2.5",
+    "@lsby/ts-log": "0.2.3",
+    "@types/express": "^4.17.21",
+    "express": "^4.19.2",
+    "zod": "3.24.2"
   },
   "packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247"
 }
