--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "vitest": "^2.0.2"
   },
   "peerDependencies": {
-    "@lsby/ts-fp-data": "0.2.5",
-    "@lsby/ts-log": "0.2.4",
+    "@lsby/ts-fp-data": "^0.2.5",
+    "@lsby/ts-log": "^0.3.0",
     "@types/express": "^4.17.21",
     "express": "^4.19.2",
     "zod": "3.24.2"
