--- a/package.json
+++ b/package.json
@@ -1,70 +1,18 @@
 {
-  "name": "@lsby/net-core",
+  "name": "@lsby/net-core-monorepo",
   "version": "0.12.3",
+  "private": true,
   "type": "module",
-  "exports": {
-    "require": "./dist/cjs/index.cjs",
-    "import": "./dist/esm/index.js"
-  },
-  "bin": {
-    "lsby-net-core-gen-api-list": "./dist/bin/gen-api-list/bin.cjs",
-    "lsby-net-core-gen-api-type": "./dist/bin/gen-api-type/bin.cjs",
-    "lsby-net-core-gen-test": "./dist/bin/gen-test/bin.cjs"
-  },
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "build:all": "npm run build:cjs && npm run build:esm && npm run build:bin",
-    "build:bin": "tsup src/bin/**/*.ts --external typescript --format cjs --clean --dts -d dist/bin",
-    "build:cjs": "tsup src/**/*.ts --external typescript --format cjs --clean --dts -d dist/cjs",
-    "build:esm": "tsup src/**/*.ts --external typescript --format esm --clean --dts -d dist/esm",
-    "check:all": "npm run check:format && npm run check:lint && npm run check:type:check",
-    "check:format": "prettier --write .",
-    "check:lint": "eslint . --fix",
-    "check:type:check": "tsc --noEmit",
-    "check:type:check:watch": "tsc --noEmit -w",
+    "build": "pnpm -r --filter=@lsby/net-core run build:all",
+    "check:all": "pnpm -r run check:all",
+    "check:type:check": "pnpm -r run check:type:check",
     "prepare": "husky",
-    "pub:public": "npm run check:all && npm run test:base && npm run build:all && bumpp && npm publish --access public",
-    "test:base": "npm run check:all && vitest run",
-    "test:coverage": "npm run check:all && vitest run --coverage && open-cli ./coverage/index.html"
-  },
-  "dependencies": {
-    "@lsby/ts-global": "^0.0.8",
-    "commander": "^12.1.0",
-    "lodash": "^4.17.21",
-    "short-uuid": "^5.2.0",
-    "ws": "^8.18.0"
+    "test:base": "pnpm -r run test:base",
+    "test:coverage": "pnpm --filter=@lsby/net-core run test:coverage"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-    "@lsby/eslint-config": "^0.3.14",
-    "@lsby/eslint-plugin": "^0.0.29",
-    "@types/lodash": "^4.17.7",
-    "@types/node": "^20.12.10",
-    "@types/ws": "^8.5.13",
-    "@vitest/coverage-v8": "^2.0.2",
-    "bumpp": "^9.4.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jsdoc": "^50.2.4",
-    "eslint-plugin-react": "^7.36.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-sort-class-members": "^1.20.0",
-    "husky": "^9.1.7",
-    "prettier": "3.3.3",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-packagejson": "^2.5.2",
-    "tsup": "^8.5.0",
-    "typescript": "<5.6.0",
-    "vitest": "^2.0.2"
-  },
-  "peerDependencies": {
-    "@lsby/ts-fp-data": "^0.2.5",
-    "@lsby/ts-log": "^0.3.0",
-    "@types/express": "^4.17.21",
-    "express": "^4.19.2",
-    "zod": "3.24.2"
+    "husky": "^9.1.7"
   },
   "packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247"
 }
