--- a/packages/example-base/package.json
+++ b/packages/example-base/package.json
@@ -4,30 +4,36 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "check:all": "npm run check:format && npm run check:lint && npm run check:type:check",
-    "check:format": "prettier --write .",
-    "check:lint": "eslint . --fix",
-    "check:type:check": "tsc --noEmit",
-    "dev": "tsx src/index.ts"
+    "_check:all": "npm run _check:format && npm run _check:lint && npm run _check:type",
+    "_check:format": "prettier --write .",
+    "_check:lint": "eslint . --fix",
+    "_check:type": "tsc --noEmit",
+    "_gen:all": "npm run _gen:api:list && npm run _gen:api:type",
+    "_gen:api:list": "cross-env DEBUG=@lsby:* lsby-net-core-gen-api-list ./tsconfig.json ./src/interface ./src/interface/interface-list.ts",
+    "_gen:api:type": "cross-env DEBUG=@lsby:* lsby-net-core-gen-api-type ./tsconfig.json ./src/interface ./src/types/interface-type.ts",
+    "dev": "cross-env DEBUG=@lsby:* tsx watch src/index.ts"
   },
   "dependencies": {
-    "@lsby/net-core": "workspace:*"
+    "@lsby/net-core": "workspace:*",
+    "@lsby/ts-fp-data": "^0.2.5",
+    "zod": "3.24.2"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-    "@lsby/eslint-config": "^0.3.14",
-    "@lsby/eslint-plugin": "^0.0.29",
-    "@types/node": "^20.12.10",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@lsby/eslint-config": "^0.3.15",
+    "@lsby/eslint-plugin": "^0.0.30",
+    "@types/node": "^25.0.3",
+    "cross-env": "^10.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-jsdoc": "^50.2.4",
-    "eslint-plugin-react": "^7.36.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-sort-class-members": "^1.20.0",
-    "prettier": "3.3.3",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-packagejson": "^2.5.2",
-    "tsx": "^4.7.0",
+    "eslint-plugin-sort-class-members": "^1.21.0",
+    "prettier": "3.7.4",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "prettier-plugin-packagejson": "^2.5.20",
+    "tsx": "^4.21.0",
     "typescript": "<5.6.0"
-  }
+  },
+  "packageManager": "pnpm@9.7.1"
 }
