--- a/packages/2-example-plugins/tsconfig.json
+++ b/packages/2-example-plugins/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src", "eslint.config.mjs", "vitest.config.ts"],
+  "include": ["src", "eslint.config.mjs"],
   "compilerOptions": {
     /* Language and Environment */
     "target": "ESNext",
