--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,9 +21,7 @@
     "_build:esm": "tsup src/**/*.ts --external typescript --format esm --clean --dts -d dist/esm",
     "_check:all": "npm run _check:format && npm run _check:lint",
     "_check:format": "prettier --write .",
-    "_check:lint": "eslint . --fix",
-    "test:base": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "_check:lint": "eslint . --fix"
   },
   "dependencies": {
     "commander": "^12.1.0",
@@ -36,7 +34,6 @@
     "@lsby/eslint-plugin": "^0.0.30",
     "@types/node": "^20.12.10",
     "@types/ws": "^8.5.13",
-    "@vitest/coverage-v8": "^2.0.2",
     "bumpp": "^9.4.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -46,8 +43,7 @@
     "prettier-plugin-organize-imports": "^4.3.0",
     "prettier-plugin-packagejson": "^2.5.20",
     "tsup": "^8.5.0",
-    "typescript": "<5.6.0",
-    "vitest": "^2.0.2"
+    "typescript": "<5.6.0"
   },
   "peerDependencies": {
     "@lsby/ts-fp-data": "^0.2.5",
