--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@lsby/net-core",
   "version": "0.12.3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lsby/net-core.git"
+  },
   "type": "module",
   "exports": {
     "require": "./dist/cjs/index.cjs",
