--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,7 +26,7 @@
     "_check:all": "npm run _check:format && npm run _check:lint",
     "_check:format": "prettier --write .",
     "_check:lint": "eslint . --fix",
-    "publish": "npm run _build:all && bumpp && pnpm publish"
+    "publish": "npm run _build:all && bumpp && npm publish"
   },
   "dependencies": {
     "commander": "^12.1.0",
