--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,13 +30,15 @@
   },
   "dependencies": {
     "commander": "^12.1.0",
+    "multer": "^2.0.2",
     "short-uuid": "^5.2.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-    "@lsby/eslint-config": "^0.3.15",
-    "@lsby/eslint-plugin": "^0.0.30",
+    "@lsby/eslint-config": "^0.3.18",
+    "@lsby/eslint-plugin": "^0.1.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.12.10",
     "@types/ws": "^8.5.13",
     "bumpp": "^9.4.1",
@@ -53,8 +55,8 @@
   "peerDependencies": {
     "@lsby/ts-fp-data": "^0.2.5",
     "@lsby/ts-log": "^0.3.0",
-    "@types/express": "^4.17.21",
-    "express": "^4.19.2",
+    "@types/express": "^5.0.6",
+    "express": "^5.2.1",
     "zod": "3.24.2"
   },
   "packageManager": "pnpm@9.7.1"
