--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,22 +35,24 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-    "@lsby/eslint-config": "^0.3.18",
-    "@lsby/eslint-plugin": "^0.1.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@lsby/eslint-config": "^0.5.3",
+    "@lsby/eslint-plugin": "^0.2.1",
+    "@types/eslint": "^9.6.1",
     "@types/multer": "^2.0.0",
-    "@types/node": "^20.12.10",
-    "@types/ws": "^8.5.13",
+    "@types/node": "^25.0.6",
+    "@types/ws": "^8.18.1",
     "bumpp": "^9.4.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jsdoc": "^50.2.4",
-    "eslint-plugin-sort-class-members": "^1.20.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jsdoc": "^62.0.0",
+    "eslint-plugin-sort-class-members": "^1.21.0",
     "prettier": "3.7.4",
     "prettier-plugin-organize-imports": "^4.3.0",
     "prettier-plugin-packagejson": "^2.5.20",
-    "tsup": "^8.5.0",
-    "typescript": "<5.6.0"
+    "tsup": "^8.5.1",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.52.0"
   },
   "peerDependencies": {
     "@lsby/ts-fp-data": "^0.2.5",
